Add all scout-troop html

--- a/header.html
+++ b/header.html
@@ -117,7 +117,7 @@
 										<li><a href="scout-troop-awards.html">獎項</a></li>
 										<li><a href="scout-troop-gallery.html">相簿</a></li>
 										<li><a href="scout-troop-notice.html">通告</a></li>
-										<li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
+										<li><a href="scout-troop-trainingProgram.html">童軍訓練綱要</a></li>
 										<li> <a href="javascript:;">童軍有用資料</a>
 											<ul class="sub-menu">
 												<li><a href="scout-troop-info.html#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
