--- a/cub-scout-awards.html
+++ b/cub-scout-awards.html
@@ -64,20 +64,8 @@
 			<div class="top-bar">
 				<div class="container" style="margin-top: 10px; margin-bottom: 10px;">
 					<div class="row">
-						<!-- <div class="w3-topbar-left">
-						<ul class="social-line text-center pull-right">
-							<li><a href="javascript:void(0);"><i class="fa fa-phone"></i> <span>+149 75 23 222 38</span> </a></li>
-							<li><a href="javascript:void(0);"><i class="fa fa-envelope-o"></i> <span>info@example.com</span></a></li>
-							<li><a href="javascript:void(0);"><i class="fa fa-clock-o"></i> <span>Mon - Fri: 08.00 - 17.00</span></a></li>
-						</ul>
-					</div>                         -->
 						<div class="w3-topbar-right">
 							<ul class="text-center pull-right" style="display: flex; list-style: none;">
-								<!-- <ul class="social-line text-center pull-right"> -->
-								<!-- <li><a href="javascript:void(0);" class="fa fa-facebook"></a></li>
-							<li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
-							<li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
-							<li><a href="javascript:void(0);" class="fa fa-google-plus"></a></li> -->
 								<li><a href="centennial-tenthBrigade.html" class=" ">第十旅百週年專區 </a>|&nbsp;</li>
 								<li><a href="leader-login.html" class=" ">領袖登入區 </a>|&nbsp;</li>
 								<li><a href="youth-login.html" class=" ">青少年成員登入區</a></li>
@@ -173,8 +161,8 @@
 										<li><a href="cub-scout-gallery.html">相簿</a></li>
 										<li><a href="cub-scout-notice.html">通告</a></li>
 										<li><a href="cub-scout-manual.html">幼童軍手册</a></li>
-										<li><a href="cub-scout-uniform.html">小童軍制服</a></li>
-										<li> <a href="javascript:;">小童軍有用資料</a>
+										<li><a href="cub-scout-uniform.html">幼童軍制服</a></li>
+										<li> <a href="javascript:;">幼童軍有用資料</a>
 											<ul class="sub-menu">
 												<li><a href="cub-scout-info.html#info1">請假連結</a></li>
 												<li><a href="cub-scout-info.html#info2">善行紀錄表</a></li>
@@ -189,7 +177,7 @@
 										<li><a href="scout-troop-awards.html">獎項</a></li>
 										<li><a href="scout-troop-gallery.html">相簿</a></li>
 										<li><a href="scout-troop-notice.html">通告</a></li>
-										<li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
+										<li><a href="scout-troop-trainingProgram.html">童軍訓練綱要</a></li>
 										<li> <a href="javascript:;">童軍有用資料</a>
 											<ul class="sub-menu">
 												<li><a href="scout-troop-info.html#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
@@ -229,30 +217,32 @@
 										<li> <a href="javascript:;">報名表 & 同意書</a>
 											<ul>
 												<li><a href="./pdf/event-registration-form.pdf" target="_blank">活動/訓練班報名表</a></li>
-												<li><a href="./pdf/parental-consent.pdf">家長同意書</a></li>
+												<li><a href="./pdf/parental-consent.pdf" target="_blank">家長同意書</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">通知書</a>
 											<ul>
-												<li><a href="./pdf/golden-bauhinia-award-notice.pdf">金紫荊獎章開展通知書</a></li>
+												<li><a href="./pdf/golden-bauhinia-award-notice.pdf" target="_blank">金紫荊獎章開展通知書</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">申請表</a>
 											<ul>
-												<li><a href="./pdf/golden-bauhinia-award-form.pdf">金紫荊獎章及證書申請表</a></li>
-												<li><a href="./pdf/scout-specialist-badge.pdf">童軍專科徽章/獎章考驗申請表</a></li>
-												<li><a href="./pdf/general-leader-medal-and-certificate.pdf">總領袖獎章及證書申請表</a></li>
-												<li><a href="./pdf/senior-scout-medal-and-certificate.pdf">深資童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/honor-scout-medal-and-certificate.pdf">榮譽童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
-												<li><a href="./pdf/rover-scout-medal-and-certificate.pdf">樂行童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/baden-medal-and-certificate.pdf">貝登堡獎章及證書申請表</a></li>
-												<li><a href="./pdf/overseas-application-form">參加海外活動申請表格</a></li>
+												<li><a href="./pdf/golden-bauhinia-award-form.pdf" target="_blank">金紫荊獎章及證書申請表</a></li>
+												<li><a href="./pdf/scout-specialist-badge.pdf" target="_blank">童軍專科徽章/獎章考驗申請表</a></li>
+												<li><a href="./pdf/general-leader-medal-and-certificate.pdf" target="_blank">總領袖獎章及證書申請表</a></li>
+												<li><a href="./pdf/senior-scout-medal-and-certificate.pdf" target="_blank">深資童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/honor-scout-medal-and-certificate.pdf" target="_blank">榮譽童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf"
+														target="_blank">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
+												<li><a href="./pdf/rover-scout-medal-and-certificate.pdf" target="_blank">樂行童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/baden-medal-and-certificate.pdf" target="_blank">貝登堡獎章及證書申請表</a></li>
+												<li><a href="./pdf/overseas-application-form" target="_blank">參加海外活動申請表格</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">其他</a>
 											<ul>
-												<li><a href="./pdf/seniorScout-honorScout-medal-and-certificate.pdf">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
+												<li><a href="./pdf/seniorScout-honorScout-medal-and-certificate.pdf"
+														target="_blank">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
 											</ul>
 										</li>
 									</ul>
