--- a/cub-scout-intro.html
+++ b/cub-scout-intro.html
@@ -161,8 +161,8 @@
 										<li><a href="cub-scout-gallery.html">相簿</a></li>
 										<li><a href="cub-scout-notice.html">通告</a></li>
 										<li><a href="cub-scout-manual.html">幼童軍手册</a></li>
-										<li><a href="cub-scout-uniform.html">小童軍制服</a></li>
-										<li> <a href="javascript:;">小童軍有用資料</a>
+										<li><a href="cub-scout-uniform.html">幼童軍制服</a></li>
+										<li> <a href="javascript:;">幼童軍有用資料</a>
 											<ul class="sub-menu">
 												<li><a href="cub-scout-info.html#info1">請假連結</a></li>
 												<li><a href="cub-scout-info.html#info2">善行紀錄表</a></li>
@@ -177,7 +177,7 @@
 										<li><a href="scout-troop-awards.html">獎項</a></li>
 										<li><a href="scout-troop-gallery.html">相簿</a></li>
 										<li><a href="scout-troop-notice.html">通告</a></li>
-										<li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
+										<li><a href="scout-troop-trainingProgram.html">童軍訓練綱要</a></li>
 										<li> <a href="javascript:;">童軍有用資料</a>
 											<ul class="sub-menu">
 												<li><a href="scout-troop-info.html#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
