--- a/header.html
+++ b/header.html
@@ -172,11 +172,10 @@
 												<li><a href="./pdf/general-leader-medal-and-certificate.pdf" target="_blank">總領袖獎章及證書申請表</a></li>
 												<li><a href="./pdf/senior-scout-medal-and-certificate.pdf" target="_blank">深資童軍獎章及證書申請表</a></li>
 												<li><a href="./pdf/honor-scout-medal-and-certificate.pdf" target="_blank">榮譽童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf"
-														target="_blank">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
+												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf" target="_blank">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
 												<li><a href="./pdf/rover-scout-medal-and-certificate.pdf" target="_blank">樂行童軍獎章及證書申請表</a></li>
 												<li><a href="./pdf/baden-medal-and-certificate.pdf" target="_blank">貝登堡獎章及證書申請表</a></li>
-												<li><a href="./pdf/overseas-application-form" target="_blank">參加海外活動申請表格</a></li>
+												<li><a href="./pdf/overseas-application-form.pdf" target="_blank">參加海外活動申請表格</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">其他</a>
